--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-validator": "^6.12.1",
     "http-proxy": "^1.18.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5",
     "web3-eth-accounts": "^1.5.2"
