--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@polkadot/api": "^5.6.1",
     "body-parser": "^1.19.0",
+    "bs58": "^4.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -32,6 +33,7 @@
     "moment": "^2.29.1",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5",
+    "tweetnacl": "^1.0.3",
     "web3-eth-accounts": "^1.5.2"
   },
   "devDependencies": {
@@ -44,5 +46,8 @@
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
     "typescript": "^4.0.3"
+  },
+  "engines": {
+    "node": ">=11.0.0"
   }
 }
