--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "posttest": "yarn run lint"
   },
   "dependencies": {
+    "@crustio/type-definitions": "^1.2.0",
+    "@koa/router": "^10.1.1",
     "@polkadot/api": "^5.6.1",
+    "@types/uuid": "^8.3.1",
+    "bignumber.js": "^9.0.1",
     "body-parser": "^1.19.0",
     "bs58": "^4.0.1",
     "cors": "^2.8.5",
@@ -32,13 +36,17 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mysql2": "^2.3.0",
+    "node-schedule": "^2.0.0",
     "sequelize": "^6.6.5",
     "tweetnacl": "^1.0.3",
-    "web3-eth-accounts": "^1.5.2"
+    "uuid": "^8.3.2",
+    "web3-eth-accounts": "^1.5.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/mocha": "^9.0.0",
     "@types/http-proxy": "^1.17.7",
     "@types/lodash": "^4.14.172",
     "@types/node": "^14.11.2",
