add config files for build

--- a/.env-example
+++ b/.env-example
@@ -1,2 +1,15 @@
-PORT=5050
-IPFS_ENDPOINT=http://127.0.0.1:5001
+NODE_ENV=production
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_DB=pinning_service
+MYSQL_USER=root
+MYSQL_PASSWORD=root
+MYSQL_POOL_MAX=10
+MYSQL_POOL_MIN=0
+MYSQL_POOL_IDLE=30000
+MYSQL_POOL_ACQUIRE=30000
+CRUST_SEED=
+WS_ENDPOINT=wss://rpc-crust-mainnet.decoo.io
+DEFAULT_FILE_SIZE=2147483648
+CRUST_TIPS=0.00005
+VALID_FILE_SIZE=3
