--- a/.env-example
+++ b/.env-example
@@ -1,15 +1,15 @@
-NODE_ENV=production
-MYSQL_HOST=localhost
-MYSQL_PORT=3306
-MYSQL_DB=pinning_service
-MYSQL_USER=root
-MYSQL_PASSWORD=root
-MYSQL_POOL_MAX=10
-MYSQL_POOL_MIN=0
-MYSQL_POOL_IDLE=30000
-MYSQL_POOL_ACQUIRE=30000
+NODE_ENV=
+MYSQL_HOST=
+MYSQL_PORT=
+MYSQL_DB=
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_POOL_MAX=
+MYSQL_POOL_MIN=
+MYSQL_POOL_IDLE=
+MYSQL_POOL_ACQUIRE=
 CRUST_SEED=
-WS_ENDPOINT=wss://rpc-crust-mainnet.decoo.io
-DEFAULT_FILE_SIZE=2147483648
-CRUST_TIPS=0.00005
-VALID_FILE_SIZE=3
+WS_ENDPOINT=
+DEFAULT_FILE_SIZE=
+CRUST_TIPS=
+VALID_FILE_SIZE=
