Eth auth support recover MyCrypto sign and Modify pinning service param handler

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bs58": "^4.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "ethers": "^5.4.6",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "http-proxy": "^1.18.1",
@@ -40,7 +41,6 @@
     "sequelize": "^6.6.5",
     "tweetnacl": "^1.0.3",
     "uuid": "^8.3.2",
-    "web3-eth-accounts": "^1.5.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
