--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@koa/router": "^10.1.1",
     "@polkadot/api": "^5.6.1",
     "@types/uuid": "^8.3.1",
+    "avalanche": "^3.8.6",
     "bignumber.js": "^9.0.1",
     "body-parser": "^1.19.0",
     "bs58": "^4.0.1",
     "cors": "^2.8.5",
+    "create-hash": "^1.2.0",
     "dotenv": "^10.0.0",
     "ethers": "^5.4.6",
     "express": "^4.17.1",
