--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "@crustio/type-definitions": "^1.2.0",
     "@koa/router": "^10.1.1",
+    "@onflow/fcl": "^0.0.77",
+    "@onflow/types": "^0.0.5",
     "@polkadot/api": "^5.6.1",
     "@types/uuid": "^8.3.1",
     "avalanche": "^3.8.6",
@@ -48,9 +50,9 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/mocha": "^9.0.0",
     "@types/http-proxy": "^1.17.7",
     "@types/lodash": "^4.14.172",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^14.11.2",
     "gts": "^3.1.0",
     "nodemon": "^2.0.12",
