--- a/.github/workflows/decoo-main.yml
+++ b/.github/workflows/decoo-main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    if: github.repository == 'decooio/ipfs-w3auth-pinning-service'
+    if: github.repository == 'crustio/ipfs-w3auth-pinning-service'
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -22,21 +22,22 @@ jobs:
       - run: yarn build
 
       -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
-        name: Login to Github container registry
-        uses: docker/login-action@v1
+        name: Login to DockerHub
+        uses: docker/login-action@v1 
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.DECOO_PAT }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile
           push: true
-          tags: ghcr.io/decooio/ipfs-w3auth-pinning-service:latest
+          tags: crustio/ipfs-w3auth-pinning-service:latest
