W3auth handler use crust.js package (#16)
* base commit for pinning service

* add query api

* add web3 auth middleware

* code format

* Add order in crust and update pin object status schedule job

* add config files for build

* parse config number type

* Add readme file and modify chainTypeDelimiter

* delete all irrelavant functions
unify the logger styles

* Modify workflow name & fix log bug

* Modify image and repository name

* Modify http auth header prefix and Fix query bug

* Eth auth support recover MyCrypto sign and Modify pinning service param handler

* Modify schedule job

* Fix call crust order bug and Modify pin object status to pinned when file uploaded

* Support polkadot new wrapBytes format

* Support avalanche auth

* Unified logger

* Order in schedule job

* Prepping 0.4.0

* Modify order job to loop function

* Make place order interval to 1min

* Remove debug code

* Remove debug code

* Support flow auth test net

* reset server port

* flow auth use mainnet

* Make sure same cid only order once and if order failed retry 3 times

* Add decooio work flow

* Modify workflows

* Delete invalid file size order

* Some optimization

* Do not query order state before order

* Support verify elrond txMsg

* W3auth handler use package

Signed-off-by: zhouzibo <ziboilihua@gmail.com>

Co-authored-by: Gavin Fu <gavfu@outlook.com>
Co-authored-by: zhouzibo <18208965365@163.com>

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development nodemon ./src/app.ts",
-    "build": "tsc",
+    "build": "tsc && cp -R src/migrations dist",
     "start": "node ./dist/app.js",
     "lint": "gts lint",
     "clean": "gts clean",
@@ -21,21 +21,17 @@
     "posttest": "yarn run lint"
   },
   "dependencies": {
+    "@crustio/ipfs-w3auth-handler": "^0.0.5",
     "@crustio/type-definitions": "^1.2.0",
     "@elrondnetwork/erdjs": "^8.0.1-alpha.5",
     "@koa/router": "^10.1.1",
-    "@onflow/fcl": "^0.0.77",
-    "@onflow/types": "^0.0.5",
-    "@polkadot/api": "^5.6.1",
     "@types/uuid": "^8.3.1",
-    "avalanche": "^3.8.6",
     "bignumber.js": "^9.0.1",
     "body-parser": "^1.19.0",
     "bs58": "^4.0.1",
     "cors": "^2.8.5",
     "create-hash": "^1.2.0",
     "dotenv": "^10.0.0",
-    "ethers": "^5.4.6",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "http-proxy": "^1.18.1",
@@ -43,8 +39,8 @@
     "moment": "^2.29.1",
     "mysql2": "^2.3.0",
     "node-schedule": "^2.0.0",
+    "postgrator": "^4.3.1",
     "sequelize": "^6.6.5",
-    "tweetnacl": "^1.0.3",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   },
