--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bs58": "^4.0.1",
     "cors": "^2.8.5",
     "create-hash": "^1.2.0",
+    "dingtalk-robot-sender": "^1.2.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
