--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@koa/router": "^10.1.1",
     "@types/uuid": "^8.3.1",
     "bignumber.js": "^9.0.1",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "bs58": "^4.0.1",
     "cors": "^2.8.5",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/bluebird": "^3.5.36",
     "@types/express": "^4.17.13",
     "@types/http-proxy": "^1.17.7",
     "@types/lodash": "^4.14.172",
