--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ipfs-w3auth-pinning-service",
   "version": "0.4.0",
-  "main": "src/index.ts",
+  "main": "src/app.ts",
   "repository": "https://github.com/crustio/ipfs-w3auth-pinning-service.git",
   "author": "Zikun Fan <kun@crust.network>",
   "contributors": [
@@ -9,7 +9,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon ./src/app.ts",
+    "dev": "NODE_ENV=development nodemon -r dotenv/config ./src/app.ts -- --inspect",
     "build": "tsc && cp -R src/migrations dist",
     "start": "node ./dist/app.js",
     "lint": "gts lint",
@@ -58,8 +58,8 @@
     "@types/lodash": "^4.14.172",
     "@types/mocha": "^9.0.0",
     "@types/node": "^14.11.2",
-    "gts": "^3.1.0",
-    "nodemon": "^2.0.12",
+    "gts": "^4.0.1",
+    "nodemon": "^3.1.10",
     "ts-node": "^10.2.1",
     "typescript": "^4.0.3"
   },
